@@ -84,6 +84,7 @@ DEFAULT_IMPORT_ART            = True
 DEFAULT_IMPORT_QUIET          = False
 DEFAULT_IMPORT_QUIET_FALLBACK = 'skip'
 DEFAULT_IMPORT_RESUME         = None # "ask"
+DEFAULT_IMPORT_INCREMENTAL    = False
 DEFAULT_THREADED              = True
 DEFAULT_COLOR                 = True
 
@@ -483,7 +484,7 @@ def choose_item(task, config):
 
 def import_files(lib, paths, copy, write, autot, logpath, art, threaded,
                  color, delete, quiet, resume, quiet_fallback, singletons,
-                 timid, query):
+                 timid, query, incremental):
     """Import the files in the given list of paths, tagging each leaf
     directory as an album. If copy, then the files are copied into
     the library folder. If write, then new metadata is written to the
@@ -544,6 +545,7 @@ def import_files(lib, paths, copy, write, autot, logpath, art, threaded,
         timid = timid,
         choose_item_func = choose_item,
         query = query,
+        incremental = incremental,
     )
     
     # If we were logging, close the file.
@@ -587,6 +589,8 @@ import_cmd.parser.add_option('-t', '--timid', dest='timid',
     action='store_true', help='always confirm all actions')
 import_cmd.parser.add_option('-L', '--library', dest='library',
     action='store_true', help='retag items matching a query')
+import_cmd.parser.add_option('-i', '--incremental', dest='incremental',
+    action='store_true', help='skip already-imported directories')
 def import_func(lib, config, opts, args):
     copy  = opts.copy  if opts.copy  is not None else \
         ui.config_val(config, 'beets', 'import_copy',
@@ -612,6 +616,9 @@ def import_func(lib, config, opts, args):
             DEFAULT_IMPORT_TIMID, bool)
     logpath = opts.logpath if opts.logpath is not None else \
         ui.config_val(config, 'beets', 'import_log', None)
+    incremental = opts.incremental if opts.incremental is not None else \
+        ui.config_val(config, 'beets', 'import_incremental',
+            DEFAULT_IMPORT_INCREMENTAL, bool)
 
     # Resume has three options: yes, no, and "ask" (None).
     resume = opts.resume if opts.resume is not None else \
@@ -638,7 +645,7 @@ def import_func(lib, config, opts, args):
 
     import_files(lib, paths, copy, write, autot, logpath, art, threaded,
                  color, delete, quiet, resume, quiet_fallback, singletons,
-                 timid, query)
+                 timid, query, incremental)
 import_cmd.func = import_func
 default_commands.append(import_cmd)
 
